--- a/LR4_CSH/LR4_CSH.csproj
+++ b/LR4_CSH/LR4_CSH.csproj
@@ -88,6 +88,7 @@
     <Compile Include="DilogSubjects.Designer.cs">
       <DependentUpon>DilogSubjects.cs</DependentUpon>
     </Compile>
+    <Compile Include="FileDialogOpenSave.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -144,6 +145,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="DilogForms\" />
+    <Folder Include="StudentsFiles\" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
