--- a/LR4_CSH/LR4_CSH.csproj
+++ b/LR4_CSH/LR4_CSH.csproj
@@ -96,13 +96,13 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Group.cs" />
-    <Compile Include="Person.cs" />
+    <Compile Include="Models\Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerializeJSON.cs" />
     <Compile Include="SortableBindingList.cs" />
-    <Compile Include="Students.cs" />
-    <Compile Include="Subjects.cs" />
+    <Compile Include="Models\Students.cs" />
+    <Compile Include="Models\Subjects.cs" />
     <Compile Include="ValidateUserString.cs" />
     <EmbeddedResource Include="DialogChosenStudViaSub.resx">
       <DependentUpon>DialogChosenStudViaSub.cs</DependentUpon>
@@ -146,7 +146,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="DilogForms\" />
-    <Folder Include="StudentsFiles\" />
+    <Folder Include="Images\" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
