--- a/LR4_CSH/LR7_CSH.csproj
+++ b/LR4_CSH/LR7_CSH.csproj
@@ -64,35 +64,35 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DialogChosenStudViaSub.cs">
+    <Compile Include="View\DialogChosenStudViaSub.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DialogChosenStudViaSub.Designer.cs">
+    <Compile Include="View\DialogChosenStudViaSub.Designer.cs">
       <DependentUpon>DialogChosenStudViaSub.cs</DependentUpon>
     </Compile>
-    <Compile Include="DialogGroupCreation.cs">
+    <Compile Include="View\DialogGroupCreation.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DialogGroupCreation.Designer.cs">
+    <Compile Include="View\DialogGroupCreation.Designer.cs">
       <DependentUpon>DialogGroupCreation.cs</DependentUpon>
     </Compile>
-    <Compile Include="DialogStudList.cs">
+    <Compile Include="View\DialogStudList.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DialogStudList.Designer.cs">
+    <Compile Include="View\DialogStudList.Designer.cs">
       <DependentUpon>DialogStudList.cs</DependentUpon>
     </Compile>
-    <Compile Include="DilogSubjects.cs">
+    <Compile Include="View\DilogSubjects.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DilogSubjects.Designer.cs">
+    <Compile Include="View\DilogSubjects.Designer.cs">
       <DependentUpon>DilogSubjects.cs</DependentUpon>
     </Compile>
-    <Compile Include="FileDialogOpenSave.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Utils\FileDialogOpenSave.cs" />
+    <Compile Include="View\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
+    <Compile Include="View\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Group.cs" />
@@ -100,23 +100,23 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerializeJSON.cs" />
-    <Compile Include="SortableBindingList.cs" />
+    <Compile Include="Utils\SortableBindingList.cs" />
     <Compile Include="Models\Students.cs" />
     <Compile Include="Models\Subjects.cs" />
-    <Compile Include="ValidateUserString.cs" />
-    <EmbeddedResource Include="DialogChosenStudViaSub.resx">
+    <Compile Include="Utils\ValidateUserString.cs" />
+    <EmbeddedResource Include="View\DialogChosenStudViaSub.resx">
       <DependentUpon>DialogChosenStudViaSub.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="DialogGroupCreation.resx">
+    <EmbeddedResource Include="View\DialogGroupCreation.resx">
       <DependentUpon>DialogGroupCreation.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="DialogStudList.resx">
+    <EmbeddedResource Include="View\DialogStudList.resx">
       <DependentUpon>DialogStudList.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="DilogSubjects.resx">
+    <EmbeddedResource Include="View\DilogSubjects.resx">
       <DependentUpon>DilogSubjects.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
+    <EmbeddedResource Include="View\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
